--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
     "react-native": "0.73.9",
+    "react-native-fbsdk-next": "^13.1.3",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.11.0",
@@ -39,6 +42,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/node": "^22.7.4",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
