--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-redux": "^9.1.2",
