--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.7",
     "iconsax-react-native": "^0.0.8",
+    "mongoose": "^8.7.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
     "react-native-fbsdk-next": "^13.1.3",
