--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "18.2.0",
     "react-native": "0.73.9",
     "react-native-fbsdk-next": "^13.1.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^5.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
