--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
@@ -26,12 +27,14 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^5.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-redux": "^9.1.2",
