--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.7",
     "iconsax-react-native": "^0.0.8",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
@@ -38,7 +39,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
