--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-fbsdk-next": "^13.1.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^5.0.0",
