--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-firebase/app": "^21.2.0",
+    "@react-native-firebase/messaging": "^21.2.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -20,11 +22,13 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.7",
     "burnt": "^0.12.2",
+    "eventemitter3": "^5.0.1",
     "iconsax-react-native": "^0.0.8",
     "moment": "^2.30.1",
     "mongoose": "^8.7.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fbsdk-next": "^13.1.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.19.0",
