--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/messaging": "^21.2.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -37,6 +38,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^5.0.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
