--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/messaging": "^21.2.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
@@ -30,6 +31,7 @@
     "mongoose": "^8.7.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
+    "react-native-date-picker": "^5.0.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-fbsdk-next": "^13.1.3",
     "react-native-geolocation-service": "^5.3.1",
