--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "iconsax-react-native": "^0.0.8",
     "moment": "^2.30.1",
     "mongoose": "^8.7.1",
+    "query-string": "^9.1.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
     "react-native-date-picker": "^5.0.7",
@@ -51,6 +52,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.7.0",
     "react-native-virtualized-view": "^1.0.0",
+    "react-native-webview": "^13.12.3",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1"
