--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "query-string": "^9.1.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-fbsdk-next": "^13.1.3",
