--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "^2.19.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
+    "react-native-month-year-picker": "^1.9.0",
     "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^5.0.0",
     "react-native-picker-select": "^9.3.1",
